# Samantha_OS

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.chainlit/: config.toml
app/: __init__.py  chainlit.md  samantha.py
app/.chainlit/: config.toml
app/config/: ai_models.yaml  database.py  huggingface.py  realtime_instructions.txt
app/realtime/: __init__.py
app/scripts/: show_schema.py  test_db_connection.py  test_db_path.py  test_db_queries.py  test_image_generation.py  test_simple_db.py
app/scripts/test_tools/: mock_chainlit.py  test_create_python_file.py  test_database_tool.py  test_flux_togetherai.py  test_llama_32.py  test_structured_output_list.py  test_subprocess.py  test_tavily.py
app/tools/: __init__.py  browser.py  chart.py  database.py  image.py  linkedin.py  python_file.py  search.py  stock.py
app/utils/: ai_models.py
scratchpad/: add_numbers.py  bookstore.db  linkedin_post.md
utils/: __init__.py  common.py
